--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,20 +1,52 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="69759b">  <td>24/06/23 15:05:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOpportunity.NewOpportunity()[pri:0, instance:sprint1.CreateOpportunity@27462a88]">NewOpportunity</td> 
-  <td>TestNG-methods-1@1769107882</td>   <td></td> </tr>
-<tr bgcolor="a8a16a">  <td>24/06/23 15:04:48</td>   <td>-27371</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Hooks.PreConditions()[pri:0, instance:sprint1.CreateOpportunity@27462a88]">&gt;&gt;PreConditions</td> 
-<td>&nbsp;</td>  <td>TestNG-methods-1@1769107882</td>   <td></td> </tr>
-<tr bgcolor="a8a16a">  <td>24/06/23 15:05:15</td>   <td>17</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Hooks.PostConditions()[pri:0, instance:sprint1.CreateOpportunity@27462a88]">&lt;&lt;PostConditions</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="a8a16a">  <td>24/06/23 15:05:45</td>   <td>30004</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Hooks.PostConditions()[pri:0, instance:sprint1.CreateOpportunity@27462a88]">&lt;&lt;PostConditions</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="a8a16a">  <td>24/06/23 15:04:47</td>   <td>-27418</td> <td title="&gt;&gt;Hooks.startReport()[pri:0, instance:sprint1.CreateOpportunity@27462a88]">&gt;&gt;startReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2028265136</td>   <td></td> </tr>
-<tr bgcolor="a8a16a">  <td>24/06/23 15:04:47</td>   <td>-27389</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Hooks.testCaseDetails()[pri:0, instance:sprint1.CreateOpportunity@27462a88]">&gt;&gt;testCaseDetails</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2028265136</td>   <td></td> </tr>
-<tr bgcolor="a8a16a">  <td>24/06/23 15:04:48</td>   <td>-27371</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Hooks.PreConditions()[pri:0, instance:sprint1.CreateOpportunity@27462a88]">&gt;&gt;PreConditions</td> 
-<td>&nbsp;</td>  <td>TestNG-methods-2@1946416472</td>   <td></td> </tr>
-<tr bgcolor="69759b">  <td>24/06/23 15:05:45</td>   <td>29997</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOpportunity.NewOpportunity()[pri:0, instance:sprint1.CreateOpportunity@27462a88]">NewOpportunity</td> 
-  <td>TestNG-methods-2@1946416472</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>24/06/29 15:03:43</td>   <td>0</td> <td title="&lt;&lt;Hooks.stopTheScript()[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">&lt;&lt;stopTheScript</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@539690370</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>24/06/29 15:03:43</td>   <td>-443</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Hooks.ErrorScreenshot(org.testng.ITestResult)[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">&lt;&lt;ErrorScreenshot</td> 
+<td>&nbsp;</td>  <td>main@539690370</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>24/06/29 15:03:07</td>   <td>-36328</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Hooks.PreConditions([Ljava.lang.Object;)[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">&gt;&gt;PreConditions</td> 
+<td>&nbsp;</td>  <td>main@539690370</td>   <td></td> </tr>
+<tr bgcolor="69759b">  <td>24/06/29 15:03:13</td>   <td>-30496</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOpportunity.NewOpportunity(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">NewOpportunity</td> 
+  <td>main@539690370</td>   <td></td> </tr>
+<tr bgcolor="69759b">  <td>24/06/29 15:03:13</td>   <td>-30496</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOpportunity.NewOpportunity(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">NewOpportunity</td> 
+  <td>main@539690370</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>24/06/29 15:03:43</td>   <td>-443</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Hooks.ErrorScreenshot(org.testng.ITestResult)[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">&lt;&lt;ErrorScreenshot</td> 
+<td>&nbsp;</td>  <td>main@539690370</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>24/06/29 15:03:43</td>   <td>-443</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Hooks.ErrorScreenshot(org.testng.ITestResult)[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">&lt;&lt;ErrorScreenshot</td> 
+<td>&nbsp;</td>  <td>main@539690370</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>24/06/29 15:03:07</td>   <td>-36328</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Hooks.PreConditions([Ljava.lang.Object;)[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">&gt;&gt;PreConditions</td> 
+<td>&nbsp;</td>  <td>main@539690370</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>24/06/29 15:03:43</td>   <td>-443</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Hooks.ErrorScreenshot(org.testng.ITestResult)[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">&lt;&lt;ErrorScreenshot</td> 
+<td>&nbsp;</td>  <td>main@539690370</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>24/06/29 14:59:35</td>   <td>-248613</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Hooks.testCaseDetails()[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">&gt;&gt;testCaseDetails</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@539690370</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>24/06/29 15:03:07</td>   <td>-36328</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Hooks.PreConditions([Ljava.lang.Object;)[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">&gt;&gt;PreConditions</td> 
+<td>&nbsp;</td>  <td>main@539690370</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>24/06/29 15:03:07</td>   <td>-36328</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Hooks.PreConditions([Ljava.lang.Object;)[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">&gt;&gt;PreConditions</td> 
+<td>&nbsp;</td>  <td>main@539690370</td>   <td></td> </tr>
+<tr bgcolor="69759b">  <td>24/06/29 15:03:13</td>   <td>-30496</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOpportunity.NewOpportunity(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">NewOpportunity</td> 
+  <td>main@539690370</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>24/06/29 15:03:07</td>   <td>-36328</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Hooks.PreConditions([Ljava.lang.Object;)[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">&gt;&gt;PreConditions</td> 
+<td>&nbsp;</td>  <td>main@539690370</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>24/06/29 15:03:43</td>   <td>-443</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Hooks.ErrorScreenshot(org.testng.ITestResult)[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">&lt;&lt;ErrorScreenshot</td> 
+<td>&nbsp;</td>  <td>main@539690370</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>24/06/29 15:03:43</td>   <td>-443</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Hooks.ErrorScreenshot(org.testng.ITestResult)[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">&lt;&lt;ErrorScreenshot</td> 
+<td>&nbsp;</td>  <td>main@539690370</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>24/06/29 15:03:43</td>   <td>-443</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Hooks.ErrorScreenshot(org.testng.ITestResult)[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">&lt;&lt;ErrorScreenshot</td> 
+<td>&nbsp;</td>  <td>main@539690370</td>   <td></td> </tr>
+<tr bgcolor="69759b">  <td>24/06/29 15:03:13</td>   <td>-30496</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOpportunity.NewOpportunity(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">NewOpportunity</td> 
+  <td>main@539690370</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>24/06/29 15:03:07</td>   <td>-36328</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Hooks.PreConditions([Ljava.lang.Object;)[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">&gt;&gt;PreConditions</td> 
+<td>&nbsp;</td>  <td>main@539690370</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>24/06/29 15:03:07</td>   <td>-36328</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Hooks.PreConditions([Ljava.lang.Object;)[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">&gt;&gt;PreConditions</td> 
+<td>&nbsp;</td>  <td>main@539690370</td>   <td></td> </tr>
+<tr bgcolor="69759b">  <td>24/06/29 15:03:13</td>   <td>-30496</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOpportunity.NewOpportunity(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">NewOpportunity</td> 
+  <td>main@539690370</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>24/06/29 14:59:35</td>   <td>-248655</td> <td title="&gt;&gt;Hooks.startReport()[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">&gt;&gt;startReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@539690370</td>   <td></td> </tr>
+<tr bgcolor="69759b">  <td>24/06/29 15:03:13</td>   <td>-30496</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOpportunity.NewOpportunity(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">NewOpportunity</td> 
+  <td>main@539690370</td>   <td></td> </tr>
+<tr bgcolor="69759b">  <td>24/06/29 15:03:13</td>   <td>-30496</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOpportunity.NewOpportunity(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">NewOpportunity</td> 
+  <td>main@539690370</td>   <td></td> </tr>
 </table>
