--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,46 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="61bef5">  <td>24/06/23 12:19:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Hooks.testCaseDetails()[pri:0, instance:sprint1.SAL011_2_EditOpportunity@d9345cd]">&gt;&gt;testCaseDetails</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@65586123</td>   <td></td> </tr>
-<tr bgcolor="61bef5">  <td>24/06/23 12:20:09</td>   <td>61713</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Hooks.PostConditions()[pri:0, instance:sprint1.SAL011_3_DeleteOpportunity@29215f06]">&lt;&lt;PostConditions</td> 
-<td>&nbsp;</td>  <td>main@65586123</td>   <td></td> </tr>
-<tr bgcolor="61bef5">  <td>24/06/23 12:19:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Hooks.PreConditions()[pri:0, instance:sprint1.SAL011_2_EditOpportunity@d9345cd]">&gt;&gt;PreConditions</td> 
-<td>&nbsp;</td>  <td>main@65586123</td>   <td></td> </tr>
-<tr bgcolor="61bef5">  <td>24/06/23 12:20:09</td>   <td>61895</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Hooks.PreConditions()[pri:0, instance:sprint1.SAL_Assignment_Selvi@59505b48]">&gt;&gt;PreConditions</td> 
-<td>&nbsp;</td>  <td>main@65586123</td>   <td></td> </tr>
-<tr bgcolor="61bef5">  <td>24/06/23 12:19:34</td>   <td>26033</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Hooks.PostConditions()[pri:0, instance:sprint1.SAL011_2_EditOpportunity@d9345cd]">&lt;&lt;PostConditions</td> 
-<td>&nbsp;</td>  <td>main@65586123</td>   <td></td> </tr>
-<tr bgcolor="61bef5">  <td>24/06/23 12:19:07</td>   <td>-198</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Hooks.PostConditions()[pri:0, instance:sprint1.CreateOpportunity@27f981c6]">&lt;&lt;PostConditions</td> 
-<td>&nbsp;</td>  <td>main@65586123</td>   <td></td> </tr>
-<tr bgcolor="61bef5">  <td>24/06/23 12:18:46</td>   <td>-21189</td> <td title="&gt;&gt;Hooks.startReport()[pri:0, instance:sprint1.CreateOpportunity@27f981c6]">&gt;&gt;startReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@65586123</td>   <td></td> </tr>
-<tr bgcolor="61bef5">  <td>24/06/23 12:19:51</td>   <td>43434</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Hooks.PostConditions()[pri:0, instance:sprint1.SAL011_4_CreateOpportunityWithoutMandatoryFields@2d710f1a]">&lt;&lt;PostConditions</td> 
-<td>&nbsp;</td>  <td>main@65586123</td>   <td></td> </tr>
-<tr bgcolor="61bef5">  <td>24/06/23 12:20:09</td>   <td>61894</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Hooks.testCaseDetails()[pri:0, instance:sprint1.SAL_Assignment_Selvi@59505b48]">&gt;&gt;testCaseDetails</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@65586123</td>   <td></td> </tr>
-<tr bgcolor="61bef5">  <td>24/06/23 12:20:51</td>   <td>103751</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Hooks.PostConditions()[pri:0, instance:sprint1.SAL_Assignment_Selvi@59505b48]">&lt;&lt;PostConditions</td> 
-<td>&nbsp;</td>  <td>main@65586123</td>   <td></td> </tr>
-<tr bgcolor="61bef5">  <td>24/06/23 12:19:34</td>   <td>26338</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Hooks.testCaseDetails()[pri:0, instance:sprint1.SAL011_4_CreateOpportunityWithoutMandatoryFields@2d710f1a]">&gt;&gt;testCaseDetails</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@65586123</td>   <td></td> </tr>
-<tr bgcolor="61bef5">  <td>24/06/23 12:19:34</td>   <td>26339</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Hooks.PreConditions()[pri:0, instance:sprint1.SAL011_4_CreateOpportunityWithoutMandatoryFields@2d710f1a]">&gt;&gt;PreConditions</td> 
-<td>&nbsp;</td>  <td>main@65586123</td>   <td></td> </tr>
-<tr bgcolor="fcb6ab">  <td>24/06/23 12:20:21</td>   <td>73530</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SAL_Assignment_Selvi.createOpportunity()[pri:0, instance:sprint1.SAL_Assignment_Selvi@59505b48]">createOpportunity</td> 
-  <td>main@65586123</td>   <td></td> </tr>
-<tr bgcolor="61bef5">  <td>24/06/23 12:18:46</td>   <td>-21149</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Hooks.testCaseDetails()[pri:0, instance:sprint1.CreateOpportunity@27f981c6]">&gt;&gt;testCaseDetails</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@65586123</td>   <td></td> </tr>
-<tr bgcolor="61bef5">  <td>24/06/23 12:18:46</td>   <td>-21129</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Hooks.PreConditions()[pri:0, instance:sprint1.CreateOpportunity@27f981c6]">&gt;&gt;PreConditions</td> 
-<td>&nbsp;</td>  <td>main@65586123</td>   <td></td> </tr>
-<tr bgcolor="b67e80">  <td>24/06/23 12:19:45</td>   <td>37928</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SAL011_4_CreateOpportunityWithoutMandatoryFields.createOpportunityWithoutMandatoryFields()[pri:0, instance:sprint1.SAL011_4_CreateOpportunityWithoutMandatoryFields@2d710f1a]">createOpportunityWithoutMandatoryFields</td> 
-  <td>main@65586123</td>   <td></td> </tr>
-<tr bgcolor="61bef5">  <td>24/06/23 12:19:51</td>   <td>43435</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Hooks.testCaseDetails()[pri:0, instance:sprint1.SAL011_3_DeleteOpportunity@29215f06]">&gt;&gt;testCaseDetails</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@65586123</td>   <td></td> </tr>
-<tr bgcolor="61bef5">  <td>24/06/23 12:19:51</td>   <td>43435</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Hooks.PreConditions()[pri:0, instance:sprint1.SAL011_3_DeleteOpportunity@29215f06]">&gt;&gt;PreConditions</td> 
-<td>&nbsp;</td>  <td>main@65586123</td>   <td></td> </tr>
-<tr bgcolor="ed7b7c">  <td>24/06/23 12:20:02</td>   <td>54256</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SAL011_3_DeleteOpportunity.deleteOpportunity()[pri:0, instance:sprint1.SAL011_3_DeleteOpportunity@29215f06]">deleteOpportunity</td> 
-  <td>main@65586123</td>   <td></td> </tr>
-<tr bgcolor="69759b">  <td>24/06/23 12:18:59</td>   <td>-8521</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOpportunity.NewOpportunity()[pri:0, instance:sprint1.CreateOpportunity@27f981c6]">NewOpportunity</td> 
-  <td>main@65586123</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>24/06/23 12:19:19</td>   <td>11323</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SAL011_2_EditOpportunity.editOpportunity()[pri:0, instance:sprint1.SAL011_2_EditOpportunity@d9345cd]">editOpportunity</td> 
-  <td>main@65586123</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>24/06/24 10:43:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Hooks.PreConditions([Ljava.lang.Object;)[pri:0, instance:sprint1.CreateOpportunity@48aca48b]">&gt;&gt;PreConditions</td> 
+<td>&nbsp;</td>  <td>main@2130192211</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>24/06/24 10:44:15</td>   <td>39129</td> <td title="&lt;&lt;Hooks.stopTheScript()[pri:0, instance:sprint1.CreateOpportunity@48aca48b]">&lt;&lt;stopTheScript</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2130192211</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>24/06/24 10:42:18</td>   <td>-77259</td> <td title="&gt;&gt;Hooks.startReport()[pri:0, instance:sprint1.CreateOpportunity@48aca48b]">&gt;&gt;startReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2130192211</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>24/06/24 10:43:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Hooks.PreConditions([Ljava.lang.Object;)[pri:0, instance:sprint1.CreateOpportunity@48aca48b]">&gt;&gt;PreConditions</td> 
+<td>&nbsp;</td>  <td>main@2130192211</td>   <td></td> </tr>
+<tr bgcolor="69759b">  <td>24/06/24 10:43:44</td>   <td>8371</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOpportunity.NewOpportunity(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:sprint1.CreateOpportunity@48aca48b]">NewOpportunity</td> 
+  <td>main@2130192211</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>24/06/24 10:44:14</td>   <td>38598</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Hooks.PostConditions()[pri:0, instance:sprint1.CreateOpportunity@48aca48b]">&lt;&lt;PostConditions</td> 
+<td>&nbsp;</td>  <td>main@2130192211</td>   <td></td> </tr>
+<tr bgcolor="69759b">  <td>24/06/24 10:43:44</td>   <td>8371</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOpportunity.NewOpportunity(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:sprint1.CreateOpportunity@48aca48b]">NewOpportunity</td> 
+  <td>main@2130192211</td>   <td></td> </tr>
+<tr bgcolor="69759b">  <td>24/06/24 10:43:44</td>   <td>8371</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOpportunity.NewOpportunity(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:sprint1.CreateOpportunity@48aca48b]">NewOpportunity</td> 
+  <td>main@2130192211</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>24/06/24 10:44:14</td>   <td>38598</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Hooks.PostConditions()[pri:0, instance:sprint1.CreateOpportunity@48aca48b]">&lt;&lt;PostConditions</td> 
+<td>&nbsp;</td>  <td>main@2130192211</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>24/06/24 10:42:18</td>   <td>-77224</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Hooks.testCaseDetails()[pri:0, instance:sprint1.CreateOpportunity@48aca48b]">&gt;&gt;testCaseDetails</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2130192211</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>24/06/24 10:44:14</td>   <td>38598</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Hooks.PostConditions()[pri:0, instance:sprint1.CreateOpportunity@48aca48b]">&lt;&lt;PostConditions</td> 
+<td>&nbsp;</td>  <td>main@2130192211</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>24/06/24 10:43:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Hooks.PreConditions([Ljava.lang.Object;)[pri:0, instance:sprint1.CreateOpportunity@48aca48b]">&gt;&gt;PreConditions</td> 
+<td>&nbsp;</td>  <td>main@2130192211</td>   <td></td> </tr>
 </table>
