--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,52 +1,52 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a8a16a">  <td>24/06/29 15:03:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Hooks.ErrorScreenshot(org.testng.ITestResult)[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">&lt;&lt;ErrorScreenshot</td> 
-<td>&nbsp;</td>  <td>main@539690370</td>   <td></td> </tr>
-<tr bgcolor="a8a16a">  <td>24/06/29 15:03:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Hooks.ErrorScreenshot(org.testng.ITestResult)[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">&lt;&lt;ErrorScreenshot</td> 
-<td>&nbsp;</td>  <td>main@539690370</td>   <td></td> </tr>
-<tr bgcolor="a8a16a">  <td>24/06/29 15:03:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Hooks.ErrorScreenshot(org.testng.ITestResult)[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">&lt;&lt;ErrorScreenshot</td> 
-<td>&nbsp;</td>  <td>main@539690370</td>   <td></td> </tr>
-<tr bgcolor="a8a16a">  <td>24/06/29 15:03:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Hooks.ErrorScreenshot(org.testng.ITestResult)[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">&lt;&lt;ErrorScreenshot</td> 
-<td>&nbsp;</td>  <td>main@539690370</td>   <td></td> </tr>
-<tr bgcolor="a8a16a">  <td>24/06/29 15:03:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Hooks.ErrorScreenshot(org.testng.ITestResult)[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">&lt;&lt;ErrorScreenshot</td> 
-<td>&nbsp;</td>  <td>main@539690370</td>   <td></td> </tr>
-<tr bgcolor="a8a16a">  <td>24/06/29 15:03:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Hooks.ErrorScreenshot(org.testng.ITestResult)[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">&lt;&lt;ErrorScreenshot</td> 
-<td>&nbsp;</td>  <td>main@539690370</td>   <td></td> </tr>
-<tr bgcolor="a8a16a">  <td>24/06/29 15:03:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Hooks.ErrorScreenshot(org.testng.ITestResult)[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">&lt;&lt;ErrorScreenshot</td> 
-<td>&nbsp;</td>  <td>main@539690370</td>   <td></td> </tr>
-<tr bgcolor="69759b">  <td>24/06/29 15:03:13</td>   <td>-30053</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOpportunity.NewOpportunity(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">NewOpportunity</td> 
-  <td>main@539690370</td>   <td></td> </tr>
-<tr bgcolor="69759b">  <td>24/06/29 15:03:13</td>   <td>-30053</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOpportunity.NewOpportunity(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">NewOpportunity</td> 
-  <td>main@539690370</td>   <td></td> </tr>
-<tr bgcolor="69759b">  <td>24/06/29 15:03:13</td>   <td>-30053</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOpportunity.NewOpportunity(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">NewOpportunity</td> 
-  <td>main@539690370</td>   <td></td> </tr>
-<tr bgcolor="69759b">  <td>24/06/29 15:03:13</td>   <td>-30053</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOpportunity.NewOpportunity(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">NewOpportunity</td> 
-  <td>main@539690370</td>   <td></td> </tr>
-<tr bgcolor="69759b">  <td>24/06/29 15:03:13</td>   <td>-30053</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOpportunity.NewOpportunity(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">NewOpportunity</td> 
-  <td>main@539690370</td>   <td></td> </tr>
-<tr bgcolor="69759b">  <td>24/06/29 15:03:13</td>   <td>-30053</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOpportunity.NewOpportunity(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">NewOpportunity</td> 
-  <td>main@539690370</td>   <td></td> </tr>
-<tr bgcolor="69759b">  <td>24/06/29 15:03:13</td>   <td>-30053</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOpportunity.NewOpportunity(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">NewOpportunity</td> 
-  <td>main@539690370</td>   <td></td> </tr>
-<tr bgcolor="a8a16a">  <td>24/06/29 15:03:07</td>   <td>-35885</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Hooks.PreConditions([Ljava.lang.Object;)[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">&gt;&gt;PreConditions</td> 
-<td>&nbsp;</td>  <td>main@539690370</td>   <td></td> </tr>
-<tr bgcolor="a8a16a">  <td>24/06/29 15:03:07</td>   <td>-35885</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Hooks.PreConditions([Ljava.lang.Object;)[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">&gt;&gt;PreConditions</td> 
-<td>&nbsp;</td>  <td>main@539690370</td>   <td></td> </tr>
-<tr bgcolor="a8a16a">  <td>24/06/29 15:03:07</td>   <td>-35885</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Hooks.PreConditions([Ljava.lang.Object;)[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">&gt;&gt;PreConditions</td> 
-<td>&nbsp;</td>  <td>main@539690370</td>   <td></td> </tr>
-<tr bgcolor="a8a16a">  <td>24/06/29 15:03:07</td>   <td>-35885</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Hooks.PreConditions([Ljava.lang.Object;)[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">&gt;&gt;PreConditions</td> 
-<td>&nbsp;</td>  <td>main@539690370</td>   <td></td> </tr>
-<tr bgcolor="a8a16a">  <td>24/06/29 15:03:07</td>   <td>-35885</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Hooks.PreConditions([Ljava.lang.Object;)[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">&gt;&gt;PreConditions</td> 
-<td>&nbsp;</td>  <td>main@539690370</td>   <td></td> </tr>
-<tr bgcolor="a8a16a">  <td>24/06/29 15:03:07</td>   <td>-35885</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Hooks.PreConditions([Ljava.lang.Object;)[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">&gt;&gt;PreConditions</td> 
-<td>&nbsp;</td>  <td>main@539690370</td>   <td></td> </tr>
-<tr bgcolor="a8a16a">  <td>24/06/29 15:03:07</td>   <td>-35885</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Hooks.PreConditions([Ljava.lang.Object;)[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">&gt;&gt;PreConditions</td> 
-<td>&nbsp;</td>  <td>main@539690370</td>   <td></td> </tr>
-<tr bgcolor="a8a16a">  <td>24/06/29 14:59:35</td>   <td>-248212</td> <td title="&gt;&gt;Hooks.startReport()[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">&gt;&gt;startReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@539690370</td>   <td></td> </tr>
-<tr bgcolor="a8a16a">  <td>24/06/29 15:03:43</td>   <td>443</td> <td title="&lt;&lt;Hooks.stopTheScript()[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">&lt;&lt;stopTheScript</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@539690370</td>   <td></td> </tr>
-<tr bgcolor="a8a16a">  <td>24/06/29 14:59:35</td>   <td>-248170</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Hooks.testCaseDetails()[pri:0, instance:sprint1.CreateOpportunity@506ae4d4]">&gt;&gt;testCaseDetails</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@539690370</td>   <td></td> </tr>
+<tr bgcolor="83dc97">  <td>24/06/29 17:57:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Hooks.ErrorScreenshot(org.testng.ITestResult)[pri:0, instance:sprint1.CreateOpportunity@b9b00e0]">&lt;&lt;ErrorScreenshot</td> 
+<td>&nbsp;</td>  <td>main@990897274</td>   <td></td> </tr>
+<tr bgcolor="83dc97">  <td>24/06/29 17:57:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Hooks.ErrorScreenshot(org.testng.ITestResult)[pri:0, instance:sprint1.CreateOpportunity@b9b00e0]">&lt;&lt;ErrorScreenshot</td> 
+<td>&nbsp;</td>  <td>main@990897274</td>   <td></td> </tr>
+<tr bgcolor="83dc97">  <td>24/06/29 17:57:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Hooks.ErrorScreenshot(org.testng.ITestResult)[pri:0, instance:sprint1.CreateOpportunity@b9b00e0]">&lt;&lt;ErrorScreenshot</td> 
+<td>&nbsp;</td>  <td>main@990897274</td>   <td></td> </tr>
+<tr bgcolor="83dc97">  <td>24/06/29 17:57:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Hooks.ErrorScreenshot(org.testng.ITestResult)[pri:0, instance:sprint1.CreateOpportunity@b9b00e0]">&lt;&lt;ErrorScreenshot</td> 
+<td>&nbsp;</td>  <td>main@990897274</td>   <td></td> </tr>
+<tr bgcolor="83dc97">  <td>24/06/29 17:57:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Hooks.ErrorScreenshot(org.testng.ITestResult)[pri:0, instance:sprint1.CreateOpportunity@b9b00e0]">&lt;&lt;ErrorScreenshot</td> 
+<td>&nbsp;</td>  <td>main@990897274</td>   <td></td> </tr>
+<tr bgcolor="83dc97">  <td>24/06/29 17:57:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Hooks.ErrorScreenshot(org.testng.ITestResult)[pri:0, instance:sprint1.CreateOpportunity@b9b00e0]">&lt;&lt;ErrorScreenshot</td> 
+<td>&nbsp;</td>  <td>main@990897274</td>   <td></td> </tr>
+<tr bgcolor="83dc97">  <td>24/06/29 17:57:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Hooks.ErrorScreenshot(org.testng.ITestResult)[pri:0, instance:sprint1.CreateOpportunity@b9b00e0]">&lt;&lt;ErrorScreenshot</td> 
+<td>&nbsp;</td>  <td>main@990897274</td>   <td></td> </tr>
+<tr bgcolor="856572">  <td>24/06/29 17:57:11</td>   <td>-30068</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOpportunity.NewOpportunity(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:sprint1.CreateOpportunity@b9b00e0]">NewOpportunity</td> 
+  <td>main@990897274</td>   <td></td> </tr>
+<tr bgcolor="856572">  <td>24/06/29 17:57:11</td>   <td>-30068</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOpportunity.NewOpportunity(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:sprint1.CreateOpportunity@b9b00e0]">NewOpportunity</td> 
+  <td>main@990897274</td>   <td></td> </tr>
+<tr bgcolor="856572">  <td>24/06/29 17:57:11</td>   <td>-30068</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOpportunity.NewOpportunity(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:sprint1.CreateOpportunity@b9b00e0]">NewOpportunity</td> 
+  <td>main@990897274</td>   <td></td> </tr>
+<tr bgcolor="856572">  <td>24/06/29 17:57:11</td>   <td>-30068</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOpportunity.NewOpportunity(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:sprint1.CreateOpportunity@b9b00e0]">NewOpportunity</td> 
+  <td>main@990897274</td>   <td></td> </tr>
+<tr bgcolor="856572">  <td>24/06/29 17:57:11</td>   <td>-30068</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOpportunity.NewOpportunity(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:sprint1.CreateOpportunity@b9b00e0]">NewOpportunity</td> 
+  <td>main@990897274</td>   <td></td> </tr>
+<tr bgcolor="856572">  <td>24/06/29 17:57:11</td>   <td>-30068</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOpportunity.NewOpportunity(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:sprint1.CreateOpportunity@b9b00e0]">NewOpportunity</td> 
+  <td>main@990897274</td>   <td></td> </tr>
+<tr bgcolor="856572">  <td>24/06/29 17:57:11</td>   <td>-30068</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOpportunity.NewOpportunity(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:sprint1.CreateOpportunity@b9b00e0]">NewOpportunity</td> 
+  <td>main@990897274</td>   <td></td> </tr>
+<tr bgcolor="83dc97">  <td>24/06/29 17:57:06</td>   <td>-34578</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Hooks.PreConditions([Ljava.lang.Object;)[pri:0, instance:sprint1.CreateOpportunity@b9b00e0]">&gt;&gt;PreConditions</td> 
+<td>&nbsp;</td>  <td>main@990897274</td>   <td></td> </tr>
+<tr bgcolor="83dc97">  <td>24/06/29 17:57:06</td>   <td>-34578</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Hooks.PreConditions([Ljava.lang.Object;)[pri:0, instance:sprint1.CreateOpportunity@b9b00e0]">&gt;&gt;PreConditions</td> 
+<td>&nbsp;</td>  <td>main@990897274</td>   <td></td> </tr>
+<tr bgcolor="83dc97">  <td>24/06/29 17:57:06</td>   <td>-34578</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Hooks.PreConditions([Ljava.lang.Object;)[pri:0, instance:sprint1.CreateOpportunity@b9b00e0]">&gt;&gt;PreConditions</td> 
+<td>&nbsp;</td>  <td>main@990897274</td>   <td></td> </tr>
+<tr bgcolor="83dc97">  <td>24/06/29 17:57:06</td>   <td>-34578</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Hooks.PreConditions([Ljava.lang.Object;)[pri:0, instance:sprint1.CreateOpportunity@b9b00e0]">&gt;&gt;PreConditions</td> 
+<td>&nbsp;</td>  <td>main@990897274</td>   <td></td> </tr>
+<tr bgcolor="83dc97">  <td>24/06/29 17:57:06</td>   <td>-34578</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Hooks.PreConditions([Ljava.lang.Object;)[pri:0, instance:sprint1.CreateOpportunity@b9b00e0]">&gt;&gt;PreConditions</td> 
+<td>&nbsp;</td>  <td>main@990897274</td>   <td></td> </tr>
+<tr bgcolor="83dc97">  <td>24/06/29 17:57:06</td>   <td>-34578</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Hooks.PreConditions([Ljava.lang.Object;)[pri:0, instance:sprint1.CreateOpportunity@b9b00e0]">&gt;&gt;PreConditions</td> 
+<td>&nbsp;</td>  <td>main@990897274</td>   <td></td> </tr>
+<tr bgcolor="83dc97">  <td>24/06/29 17:57:06</td>   <td>-34578</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Hooks.PreConditions([Ljava.lang.Object;)[pri:0, instance:sprint1.CreateOpportunity@b9b00e0]">&gt;&gt;PreConditions</td> 
+<td>&nbsp;</td>  <td>main@990897274</td>   <td></td> </tr>
+<tr bgcolor="83dc97">  <td>24/06/29 17:53:41</td>   <td>-240207</td> <td title="&gt;&gt;Hooks.startReport()[pri:0, instance:sprint1.CreateOpportunity@b9b00e0]">&gt;&gt;startReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@990897274</td>   <td></td> </tr>
+<tr bgcolor="83dc97">  <td>24/06/29 17:57:41</td>   <td>470</td> <td title="&lt;&lt;Hooks.stopTheScript()[pri:0, instance:sprint1.CreateOpportunity@b9b00e0]">&lt;&lt;stopTheScript</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@990897274</td>   <td></td> </tr>
+<tr bgcolor="83dc97">  <td>24/06/29 17:53:41</td>   <td>-240182</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Hooks.testCaseDetails()[pri:0, instance:sprint1.CreateOpportunity@b9b00e0]">&gt;&gt;testCaseDetails</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@990897274</td>   <td></td> </tr>
 </table>
